# Traffic_Risk_Prediction_V2V

./: .gitignore  CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  app_config.h  main.c
main/comm/: packet.c  packet.h
main/drivers/gps/: gps.c  gps.h  gps_types.h  uart_gps.c  uart_gps.h
main/drivers/mpu/: i2c_mpu.c  i2c_mpu.h  mpu6050.c  mpu6050.h  mpu_type.h
main/model/: neighbor_table.c  neighbor_table.h  shared_state.c  shared_state.h
main/system/: device_info.c  device_info.h  system_tasks.h  task_sensor.c
